# darkorbit-3d-model-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: 00_overview.md  01_formats.md  02_architecture.md  03_roadmap.md  04_blender_scripts.md  05_open_questions.md
src/: cli.py  config.py  fx_render.py  pipeline.py  render.py  server.py
src/atf/: __init__.py  decoder.py
src/awd/: __init__.py  model.py  parser.py
src/blender/: build_scene.py  render_sprites.py
src/fx/: __init__.py  awp.py  render.py
tests/: synth.py  test_atf.py  test_awd.py  test_cli.py  test_fx.py  test_fx_render.py  test_model.py  test_pipeline.py  test_render.py  test_server.py
tools/: dump_atf.py  dump_awd.py  extract_awp.py  preview_glb.py
web/: index.html
