[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "darkorbit-3d-model-tool"
version = "0.1.0"
description = "Convert DarkOrbit AWD/ATF assets to glb/gltf/obj and render turntable + particle sprites"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Samet Ozturk" }]
dependencies = [
    "Pillow>=10",
    "numpy>=1.26",
    "imagecodecs>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
do3d = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.atf", "src.awd", "src.blender", "src.fx"]
